# shade-agent-framework

./: .gitignore  .release-please-manifest.json  CLAUDE.md  Dockerfile  LICENSE  LICENSE-THIRD-PARTY.txt  NOTICE.txt  README.md  audit-notice.md  docker-command  docker-command.txt  package-lock.json  ppids  release-please-config.json  rust-toolchain.toml  sbom.cyclonedx.json  test-image.Dockerfile
.claude/: settings.json
.claude/commands/: auto-resolve-pr.md  dependabot-triage.md  fix-issue.md  resolve-pr-reviews.md
.claude/project-specifics/: commit-conventions.md  pr-quality-gate.md  project-specific-concerns.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  e2e.yml  release-please.yml
agent-template/: .env.example  deployment.yaml  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
agent-template/shade-contract-template/: Cargo.toml
agent-template/shade-contract-template/src/: attestation.rs  chainsig.rs  collateral.rs  helpers.rs  lib.rs  unit_tests.rs  update_contract.rs  upgrade.rs  views.rs
agent-template/shade-contract-template/tests/: codehash_management_tests.rs  cross_contract_tests.rs  edge_cases_tests.rs  initial_state_tests.rs  large_num_agents_tests.rs  lifecycle_tests.rs  measurements_and_ppid_tests.rs  owner_operations_tests.rs  sandbox_test.rs  update_contract_tests.rs
agent-template/shade-contract-template/tests/contracts/: contract_update.wasm  mock_mpc.wasm
agent-template/shade-contract-template/tests/helpers/: mod.rs
agent-template/src/: index.ts
contract-builder/: Dockerfile  README.md
docs/: NOTICE.txt
docs/blog/: 2026-02-23.md
docs/concepts/: framework-overview.md  logging.md  observability.md  reproducability.md  security.md  terminology.md  what-can-you-build.md
docs/getting-started/: introduction.md  quickstart-components.md  quickstart-deploying.md
docs/reference/: agent-contract.md  api.md  cli.md
docs/tutorials/: tutorials-overview.md
shade-agent-cli/: CLAUDE.md  LICENSE-THIRD-PARTY.txt  NOTICE.txt  README.md  jsconfig.json  package-lock.json  package.json  sbom.cyclonedx.json  vitest.config.js
shade-agent-cli/example-deployment-files/: README.md  example-1.yaml  example-10.yaml  example-2.yaml  example-3.yaml  example-4.yaml  example-5.yaml  example-6.yaml  example-7.yaml  example-8.yaml  example-9.yaml
shade-agent-cli/src/: cli.js  config.js  docker.js  near.js  phala.js  version-check.js
shade-agent-js/: CLAUDE.md  LICENSE-THIRD-PARTY.txt  NOTICE.txt  README.md  package-lock.json  package.json  sbom.cyclonedx.json  tsconfig.json
shade-agent-js/coverage/: agent.ts.html  coverage-final.json  index.html  near.ts.html  tee.ts.html  validation.ts.html
shade-agent-js/src/: api.ts  index.ts
shade-agent-js/tests/: test-utils.ts
shade-agent-template/: .env.example  README.md  deployment.yaml  docker-compose-logging.yaml  docker-compose-observability.yaml  docker-compose.yaml  package-lock.json  package.json
shade-agent-template/frontend/: package-lock.json
shade-agent-template/src/: index.ts  observability.ts
shade-api-ts/: package-lock.json  package.json
shade-api-ts/src/: api.ts  index.ts
shade-attestation/: CLAUDE.md  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY.txt  NOTICE.txt  README.md  sbom.cyclonedx.json
shade-attestation/assets/: app_compose.json  app_compose_with_services.json  collateral.json
shade-attestation/src/: attestation.rs  collateral.rs  measurements.rs  tcb_info.rs
shade-attestation/tests/: app_compose.rs  collateral.rs
shade-attestation/tests/common/: mod.rs
shade-contract-template/: Cargo.toml  README.md
shade-contract-template/src/: attestation.rs  collateral.rs  events.rs  helpers.rs  lib.rs  owner.rs  unit_tests.rs  views.rs  your_functions.rs
shade-contract-template/tests/: attestation_tests.rs  (+3 more)
tests-in-tee/: .env.example  README.md  docker-compose.yaml  package-lock.json  package.json  teardown-account.js  test-script.js
(+86 files in other folders)
