[package]
name = "shade-attestation"
version = "3.3.2"  # or your version
edition = "2024"
license = "MIT"

[dependencies]
# Core dependencies
borsh = { version = "1.6.0", features = ["derive"] }
dcap-qvl = { version = "0.3.2", default-features = false, features = ["contract", "borsh", "std"] }
derive_more = { version = "2.0.1", features = ["from", "deref", "into", "as_ref", "constructor"] }
dstack-sdk-types = { version = "0.1.0", features = ["borsh"] }
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.14.0", features = ["hex"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
tracing = "0.1.40"

[dev-dependencies]
rstest = "0.25.0"
# Note: test-utils dependency removed - tests will need to be updated
# or you can inline the test data from test-utils