[package]
name = "shade-contract"
description = "Basic Shade Agents contract template"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shade-attestation = { path = "../../shade-attestation" }
near-sdk = "5.21.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.24.0", features = ["unit-testing"] }
near-sandbox = "0.3.4"
shade-attestation = { path = "../../shade-attestation" }
tokio = { version = "1", features = ["full"] }
near-api = "0.8.2"
near-api-types = "0.8.2"
serde_json = "1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
